--- a/flaskSite/templates/login.html
+++ b/flaskSite/templates/login.html
@@ -9,7 +9,7 @@
  <title>Bazaar</title>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
- <link rel="stylesheet" href="static/assets/css/main.css" />
+ <link rel="stylesheet" href="/static/assets/css/main.css" />
  </head>
  <body class="is-preload">
 
@@ -35,13 +35,13 @@
  <section id="banner">
  <div class="content">
  <header>
- <h1>Welcome to Bazaar!<br />
+ <h1>!LOGIN!<br />
  </h1>
  </header>
  <p> Many Himalayan businesses lack the opportunities to advertise their products to the general public. In an internet-dominant market, this puts Himalayan businesses at a severe disadvantage compared to their competitors, as they are shorting themselves of multiple avenues of revenue. Here at Bazaar, we aim to bridge the gap between vendor and customer in this particularly untapped market and bring more traffic to Tibetan/ Himalayan businesses.</p>
  </div>
  <span class="image object">
- <img src="static/images/bazaarHomepage.jpg" alt="" />
+ <img src="/static/images/bazaarHomepage.jpg" alt="" />
  </span>
  </section>
 
@@ -61,7 +61,7 @@
  </header>
  <div class="posts">
  <article>
- <a href="https://himalayan-indian-grocery.business.site/" class="image"><img src="static/images/store1bg.jpg" alt="" /></a>
+ <a href="https://himalayan-indian-grocery.business.site/" class="image"><img src="/static/images/store1bg.jpg" alt="" /></a>
  <h3>Himalayan Grocery Store & Kitchen</h3>
  <p> </p>
  <ul class="actions">
@@ -69,7 +69,7 @@
  </ul>
  </article>
  <article>
- <a href="https://www.thehimalayanbazaar.com/" class="image"><img src="static/images/store2bg.jpg" alt="" /></a>
+ <a href="https://www.thehimalayanbazaar.com/" class="image"><img src="/static/images/store2bg.jpg" alt="" /></a>
  <h3>The Himalayan Bazaar</h3>
  <p></p>
  <ul class="actions">
@@ -77,7 +77,7 @@
  </ul>
  </article>
  <article>
- <a href="#" class="image"><img src="static/images/pic03.jpg" alt="" /></a>
+ <a href="#" class="image"><img src="/static/images/pic03.jpg" alt="" /></a>
  <h3>Tempus ullamcorper</h3>
  <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
  <ul class="actions">
@@ -92,7 +92,7 @@
     <header class="major">
     <h2>Get in touch</h2>
     </header>
-    <p>Want to get recognized and advertise your product? Reach out to us!</p>
+    <p>If you want to advertise your product, reach out to us!</p>
     <ul class="contact">
     <li class="icon solid fa-envelope"><a href="#">advertise@bazaar.com</a></li>
     </ul>
@@ -112,7 +112,7 @@
  </header>
  <ul>
  <li><a href="{{ url_for('index')}}">Homepage</a></li>
- <li><a href="{{ url_for('login')}}">Login</a></li>
+ <li><a href="generic.html">Generic</a></li>
  <li><a href="elements.html">Elements</a></li>
  <li>
  <span class="opener">Submenu</span>
@@ -122,7 +122,22 @@
  <li><a href="#">Tempus Magna</a></li>
  <li><a href="#">Feugiat Veroeros</a></li>
  </ul>
-
+ </li>
+ <li><a href="#">Etiam Dolore</a></li>
+ <li><a href="#">Adipiscing</a></li>
+ <li>
+ <span class="opener">Another Submenu</span>
+ <ul>
+ <li><a href="#">Lorem Dolor</a></li>
+ <li><a href="#">Ipsum Adipiscing</a></li>
+ <li><a href="#">Tempus Magna</a></li>
+ <li><a href="#">Feugiat Veroeros</a></li>
+ </ul>
+ </li>
+ <li><a href="#">Maximus Erat</a></li>
+ <li><a href="#">Sapien Mauris</a></li>
+ <li><a href="#">Amet Lacinia</a></li>
+ </ul>
  </nav>
 
  </div>
@@ -131,11 +146,11 @@
  </div>
 
  <!-- Scripts -->
- <script src="static/assets/js/jquery.min.js"></script>
- <script src="static/assets/js/browser.min.js"></script>
- <script src="static/assets/js/breakpoints.min.js"></script>
- <script src="static/assets/js/util.js"></script>
- <script src="static/assets/js/main.js"></script>
+ <script src="/static/assets/js/jquery.min.js"></script>
+ <script src="/static/assets/js/browser.min.js"></script>
+ <script src="/static/assets/js/breakpoints.min.js"></script>
+ <script src="/static/assets/js/util.js"></script>
+ <script src="/static/assets/js/main.js"></script>
 
  </body>
 </html>
