gmaps embedded, needs work. general formatting

--- a/flaskSite/templates/index.html
+++ b/flaskSite/templates/index.html
@@ -5,137 +5,151 @@
  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
- <head>
- <title>Bazaar</title>
- <meta charset="utf-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
- <link rel="stylesheet" href="static/assets/css/main.css" />
- </head>
- <body class="is-preload">
+    <head>
+        <title>Bazaar</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="static/assets/css/main.css" />
+    </head>
+    <body class="is-preload">
 
- <!-- Wrapper -->
- <div id="wrapper">
+    <!-- Wrapper -->
+    <div id="wrapper">
 
- <!-- Main -->
- <div id="main">
- <div class="inner">
+        <!-- Main -->
+        <div id="main">
+            <div class="inner">
 
- <!-- Header -->
- <header id="header">
- <ul class="icons">
- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
- <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
- </ul>
- </header>
+                <!-- Header -->
+                <header id="header">
+                    <ul class="icons">
+                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+                        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+                    </ul>
+                </header>
 
- <!-- Banner -->
- <section id="banner">
- <div class="content">
- <header>
- <h1>Welcome to Bazaar!<br />
- </h1>
- </header>
- <p> Many Himalayan businesses lack the opportunities to advertise their products to the general public. In an internet-dominant market, this puts Himalayan businesses at a severe disadvantage compared to their competitors, as they are shorting themselves of multiple avenues of revenue. Here at Bazaar, we aim to bridge the gap between vendor and customer in this particularly untapped market and bring more traffic to Tibetan/ Himalayan businesses.</p>
- </div>
- <span class="image object">
- <img src="static/images/bazaarHomepage.jpg" alt="" />
- </span>
- </section>
+                <!-- Banner -->
+                <section id="banner">
+                    <div class="content">
+                    <header>
+                        <h1>Welcome to Bazaar!<br />
+                        </h1>
+                    </header>
+                    <p> Many Himalayan businesses lack the opportunities to advertise their products to the general public. In an internet-dominant market, this puts Himalayan businesses at a severe disadvantage compared to their competitors, as they are shorting themselves of multiple avenues of revenue. Here at Bazaar, we aim to bridge the gap between vendor and customer in this particularly untapped market and bring more traffic to Tibetan/ Himalayan businesses.</p>
+                    </div>
+                    <span class="image object">
+                        <img src="static/images/bazaarHomepage.jpg" alt="" />
+                    </span>
+                </section>
 
- <section>
- <form method="post" action="#">
-    <div class="row gtr-uniform">
-        <div class="col-6 col-12-xsmall">
-            <input type="text" name="demo-name" id="demo-name" value="" placeholder="Enter City, State, or Zip" />
+                <section>
+                <form method="post" action="#">
+                    <div class="row gtr-uniform">
+                        <div class="col-6 col-12-xsmall">
+                            <input type="text" name="demo-name" id="demo-name" value="" placeholder="Enter City, State, or Zip" />
+                        </div>
+                    </form>
+                </section>
+
+                <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+                    <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
+                    var setting = {"query":"Tibet, China","width":800,"height":600,"satellite":false,"zoom":12,"placeId":"ChIJwSxKnH4xYTcRmdoThGIswR8","cid":"0x1fc12c628413da99","coords":[29.6472399,91.11744999999999],"lang":"en","queryString":"Tibet, China","centerCoord":[29.6472399,91.11744999999999],"id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"984688"};
+                    var d = document;
+                    var s = d.createElement('script');
+                    s.src = 'https://1map.com/js/script-for-user.js?embed_id=984688';
+                    s.async = true;
+                    s.onload = function (e) {
+                      window.OneMap.initMap(setting)
+                    };
+                    var to = d.getElementsByTagName('script')[0];
+                    to.parentNode.insertBefore(s, to);
+                  })();</script><a href="https://1map.com/map-embed">1 Map</a></div>
+                  
+                <!-- Section -->
+                <section>
+                    <header class="major">
+                        <h2>Stores</h2>
+                    </header>
+                    <div class="posts">
+                        <article>
+                            <a href="https://himalayan-indian-grocery.business.site/" class="image"><img src="static/images/store1bg.jpg" alt="" /></a>
+                            <h3>Himalayan Grocery Store & Kitchen</h3>
+                            <p> </p>
+                            <ul class="actions">
+                            <li><a href="https://himalayan-indian-grocery.business.site/" class="button">Explore</a></li>
+                            </ul>
+                        </article>
+                        <article>
+                            <a href="https://www.thehimalayanbazaar.com/" class="image"><img src="static/images/store2bg.jpg" alt="" /></a>
+                            <h3>The Himalayan Bazaar</h3>
+                            <p></p>
+                            <ul class="actions">
+                            <li><a href="https://www.thehimalayanbazaar.com/" class="button">Explore</a></li>
+                            </ul>
+                        </article>
+                        <article>
+                            <a href="#" class="image"><img src="static/images/pic03.jpg" alt="" /></a>
+                            <h3>Tempus ullamcorper</h3>
+                            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                            <ul class="actions">
+                            <li><a href="#" class="button">More</a></li>
+                            </ul>
+                        </article>
+                    </div>
+                </section>
+
+                <!-- Section -->
+                <section>
+                    <header class="major">
+                    <h2>Get in touch</h2>
+                    </header>
+                    <p>Want to get recognized and advertise your product? Reach out to us!</p>
+                    <ul class="contact">
+                    <li class="icon solid fa-envelope"><a href="#">advertise@bazaar.com</a></li>
+                    </ul>
+                    </section>
+
+            </div>
         </div>
-    </form>
-</section>
 
- <!-- Section -->
- <section>
- <header class="major">
- <h2>Stores</h2>
- </header>
- <div class="posts">
- <article>
- <a href="https://himalayan-indian-grocery.business.site/" class="image"><img src="static/images/store1bg.jpg" alt="" /></a>
- <h3>Himalayan Grocery Store & Kitchen</h3>
- <p> </p>
- <ul class="actions">
- <li><a href="https://himalayan-indian-grocery.business.site/" class="button">Explore</a></li>
- </ul>
- </article>
- <article>
- <a href="https://www.thehimalayanbazaar.com/" class="image"><img src="static/images/store2bg.jpg" alt="" /></a>
- <h3>The Himalayan Bazaar</h3>
- <p></p>
- <ul class="actions">
- <li><a href="https://www.thehimalayanbazaar.com/" class="button">Explore</a></li>
- </ul>
- </article>
- <article>
- <a href="#" class="image"><img src="static/images/pic03.jpg" alt="" /></a>
- <h3>Tempus ullamcorper</h3>
- <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
- <ul class="actions">
- <li><a href="#" class="button">More</a></li>
- </ul>
- </article>
- </div>
- </section>
+        <!-- Sidebar -->
+        <div id="sidebar">
+            <div class="inner">
 
-  <!-- Section -->
-  <section>
-    <header class="major">
-    <h2>Get in touch</h2>
-    </header>
-    <p>Want to get recognized and advertise your product? Reach out to us!</p>
-    <ul class="contact">
-    <li class="icon solid fa-envelope"><a href="#">advertise@bazaar.com</a></li>
-    </ul>
-    </section>
+                <!-- Menu -->
+                <nav id="menu">
+                    <header class="major">
+                        <h2>Menu</h2>
+                    </header>
+                    <ul>
+                    <li><a href="{{ url_for('index')}}">Homepage</a></li>
+                    <li><a href="{{ url_for('login')}}">Login</a></li>
+                    <li><a href="elements.html">Elements</a></li>
+                    <li>
+                    <span class="opener">Submenu</span>
+                    <ul>
+                        <li><a href="#">Lorem Dolor</a></li>
+                        <li><a href="#">Ipsum Adipiscing</a></li>
+                        <li><a href="#">Tempus Magna</a></li>
+                        <li><a href="#">Feugiat Veroeros</a></li>
+                    </ul>
 
- </div>
- </div>
+                </nav>
 
- <!-- Sidebar -->
- <div id="sidebar">
- <div class="inner">
+            </div>
+        </div>
 
- <!-- Menu -->
- <nav id="menu">
- <header class="major">
- <h2>Menu</h2>
- </header>
- <ul>
- <li><a href="{{ url_for('index')}}">Homepage</a></li>
- <li><a href="{{ url_for('login')}}">Login</a></li>
- <li><a href="elements.html">Elements</a></li>
- <li>
- <span class="opener">Submenu</span>
- <ul>
- <li><a href="#">Lorem Dolor</a></li>
- <li><a href="#">Ipsum Adipiscing</a></li>
- <li><a href="#">Tempus Magna</a></li>
- <li><a href="#">Feugiat Veroeros</a></li>
- </ul>
+    </div>
 
- </nav>
+    <!-- Scripts -->
+    <script src="static/assets/js/jquery.min.js"></script>
+    <script src="static/assets/js/browser.min.js"></script>
+    <script src="static/assets/js/breakpoints.min.js"></script>
+    <script src="static/assets/js/util.js"></script>
+    <script src="static/assets/js/main.js"></script>
 
- </div>
- </div>
-
- </div>
-
- <!-- Scripts -->
- <script src="static/assets/js/jquery.min.js"></script>
- <script src="static/assets/js/browser.min.js"></script>
- <script src="static/assets/js/breakpoints.min.js"></script>
- <script src="static/assets/js/util.js"></script>
- <script src="static/assets/js/main.js"></script>
-
- </body>
+    </body>
 </html>
