--- a/flaskSite/templates/login.html
+++ b/flaskSite/templates/login.html
@@ -112,7 +112,7 @@
  </header>
  <ul>
  <li><a href="{{ url_for('index')}}">Homepage</a></li>
- <li><a href="generic.html">Generic</a></li>
+ <li><a href="{{ url_for('login')}}">Login</a></li>
  <li><a href="elements.html">Elements</a></li>
  <li>
  <span class="opener">Submenu</span>
@@ -121,22 +121,6 @@
  <li><a href="#">Ipsum Adipiscing</a></li>
  <li><a href="#">Tempus Magna</a></li>
  <li><a href="#">Feugiat Veroeros</a></li>
- </ul>
- </li>
- <li><a href="#">Etiam Dolore</a></li>
- <li><a href="#">Adipiscing</a></li>
- <li>
- <span class="opener">Another Submenu</span>
- <ul>
- <li><a href="#">Lorem Dolor</a></li>
- <li><a href="#">Ipsum Adipiscing</a></li>
- <li><a href="#">Tempus Magna</a></li>
- <li><a href="#">Feugiat Veroeros</a></li>
- </ul>
- </li>
- <li><a href="#">Maximus Erat</a></li>
- <li><a href="#">Sapien Mauris</a></li>
- <li><a href="#">Amet Lacinia</a></li>
  </ul>
  </nav>
 
