--- a/flaskSite/templates/login.html
+++ b/flaskSite/templates/login.html
@@ -113,6 +113,7 @@
  <ul>
  <li><a href="{{ url_for('index')}}">Homepage</a></li>
  <li><a href="{{ url_for('login')}}">Login</a></li>
+ <li><a href="{{ url_for('shopHome')}}">Shops</a></li>
  <li><a href="elements.html">Elements</a></li>
  <li>
  <span class="opener">Submenu</span>
