--- a/flaskSite/templates/index.html
+++ b/flaskSite/templates/index.html
@@ -38,7 +38,7 @@
                         <h1>Welcome to Bazaar!<br />
                         </h1>
                     </header>
-                    <p> Many Himalayan businesses lack the opportunities to advertise their products to the general public. In an internet-dominant market, this puts Himalayan businesses at a severe disadvantage compared to their competitors, as they are shorting themselves of multiple avenues of revenue. Here at Bazaar, we aim to bridge the gap between vendor and customer in this particularly untapped market and bring more traffic to Tibetan/ Himalayan businesses.</p>
+                    <p> Many Himalayan businesses lack the opportunities to advertise their products to the general public. In an internet-dominant market, this puts Himalayan businesses at a severe disadvantage compared to their competitors, as they are shorting themselves of multiple avenues of revenue. Here at Bazaar, we aim to bridge the gap between vendor and customer and bring more traffic to Tibetan/ Himalayan businesses.</p>
                     </div>
                     <span class="image object">
                         <img src="static/images/bazaarHomepage.jpg" alt="" />
