--- a/flaskSite/templates/shop.html
+++ b/flaskSite/templates/shop.html
@@ -40,7 +40,7 @@
 
 									<span class="image main"><img src="/static/images/pic11.jpg" alt="" /></span>
 
-									<p>{{storedesc}}</p>
+									<p>{{shopContactInfo}}</p>
 
 									<div class="col-12">
 										<select name="pricefilter" id="demo-category">
