--- a/flaskSite/templates/index.html
+++ b/flaskSite/templates/index.html
@@ -38,17 +38,28 @@
                         <h1>Welcome to Bazaar!<br />
                         </h1>
                     </header>
-                    <p> Many Himalayan businesses lack the opportunities to advertise their products to the general public. In an internet-dominant market, this puts Himalayan businesses at a severe disadvantage compared to their competitors, as they are shorting themselves of multiple avenues of revenue. Here at Bazaar, we aim to bridge the gap between vendor and customer and bring more traffic to Tibetan/ Himalayan businesses.</p>
+                    <p> Many Tibetan/Himalayan businesses lack the opportunities to advertise their products to the general public. In an internet-dominant market, these businesses at a severe disadvantage compared to their competitors, as they are shorting themselves of multiple avenues of revenue. Here at Bazaar, we aim to bridge the gap between vendor and customer and bring more traffic to Tibetan/Himalayan businesses.</p>
                     </div>
                     <span class="image object">
                         <img src="static/images/bazaarHomepage.jpg" alt="" />
                     </span>
                 </section>
+                <section>
+                    <header class="major">
+                        <h2>Find Local Businesses</h2>
+                    </header>
+                    <form method="post" action="/shop/">
+                        <div class="row gtr-uniform">
+                            <div class="col-6 col-12-xsmall">
+                                <input type="text" name="location" id="loc" value="" placeholder="Enter City, State, or Zip" />
+                            </div>
+                        </form>    
+                </section>
 
                 <!-- Section -->
                 <section>
                     <header class="major">
-                        <h2>Stores</h2>
+                        <h2>Featured Stores</h2>
                     </header>
                     <ul class="actions">
                         <li><a href="{{ url_for('shopHome') }}" class="button">Explore all stores</a></li>
@@ -71,44 +82,20 @@
                             </ul>
                         </article>
                         <article>
-                            <a href="#" class="image"><img src="static/images/pic03.jpg" alt="" /></a>
-                            <h3>Tempus ullamcorper</h3>
-                            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                            <a href="https://www.himalayanartsnp.com/" class="image"><img src="static/images/store3bg.jpg" alt="" /></a>
+                            <h3>Himalayan Arts</h3>
+                            <p></p>
                             <ul class="actions">
-                            <li><a href="#" class="button">Learn More</a></li>
+                            <li><a href="https://www.himalayanartsnp.com/" class="button">Learn More</a></li>
                             </ul>
                         </article>
                     </div>
                 </section>
-
-                
-                <section>
-                    <form method="post" action="#">
-                        <div class="row gtr-uniform">
-                            <div class="col-6 col-12-xsmall">
-                                <input type="text" name="demo-name" id="demo-name" value="" placeholder="Enter City, State, or Zip" />
-                            </div>
-                        </form>
-                    </section>
-
-                <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
-                    <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
-                    var setting = {"query":"Tibet, China","width":800,"height":600,"satellite":false,"zoom":12,"placeId":"ChIJwSxKnH4xYTcRmdoThGIswR8","cid":"0x1fc12c628413da99","coords":[29.6472399,91.11744999999999],"lang":"en","queryString":"Tibet, China","centerCoord":[29.6472399,91.11744999999999],"id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"984688"};
-                    var d = document;
-                    var s = d.createElement('script');
-                    s.src = 'https://1map.com/js/script-for-user.js?embed_id=984688';
-                    s.async = true;
-                    s.onload = function (e) {
-                      window.OneMap.initMap(setting)
-                    };
-                    var to = d.getElementsByTagName('script')[0];
-                    to.parentNode.insertBefore(s, to);
-                  })();</script><a href="https://1map.com/map-embed">1 Map</a></div>
-                  
+        
                 <!-- Section -->
                 <section>
                     <header class="major">
-                    <h2>Get in touch</h2>
+                    <h2>Get In Touch</h2>
                     </header>
                     <p>Want to get recognized and advertise your product? Reach out to us!</p>
                     <ul class="contact">
@@ -132,7 +119,6 @@
                     <li><a href="{{ url_for('index')}}">Homepage</a></li>
                     <li><a href="{{ url_for('login')}}">Login</a></li>
                     <li><a href="{{ url_for('shopHome')}}">Shops</a></li>
-                    <li><a href="elements.html">Elements</a></li>
                     <li>
                     <span class="opener">Submenu</span>
                     <ul>
